# allure-custom

./: .gitignore  404.html  README.md  allure.py  example.py  index.html  mkdocs.yml  publish.sh  pyproject.toml  requirements_docs.txt
allure_custom/: __init__.py  __version__.py  allure_custom.py  allurex.py  conf.py  setting.py
allure_custom/static/: styles.css
docs/: index.md
search/: search_index.json
test/: test_serve.py
