[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allure-custom"
authors = [
    { name = "mikigo", email = "1964191531@qq.com" },
]
description = "allure custom"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]



dynamic = ["version"]

[project.optional-dependencies]

test = [
    "pytest",
]

doc = ["mkdocs-material"]

#[projects.scripts]
#allurex = "allure-custom.allure:main"

[project.urls]
Source = "https://github.com/funny-dream/allure-custom"
Documentation = "https://funny-dream.github.io/allure-custom"

[project.files]
include = [
    "allure_custom/default_allure/**",
    "allure_custom/static/**",
    "README.md",
]

exclude = [
    "allure_custom/allure",
]


[tool.hatch.version]
path = "allure_custom/__version__.py"
